--- a/style.css
+++ b/style.css
@@ -8,9 +8,12 @@ body {
     font-family: Raleway;
 }
 a:link { 
- text-decoration:none;
- color: #000;
-} 
+    text-decoration:none;
+    color: #000;
+}
+a:visited {
+    color: #000;
+}
 header{
     display: flex;
     justify-content: space-between;
