--- a/style.css
+++ b/style.css
@@ -322,11 +322,14 @@ footer{
 .logo {
     display: block;
     position: absolute;
+    height: 40px;
+    margin-left: 20px;
 }
 .headerNav a.active {
     border-top: none;
     border-bottom: 2px solid #0065FC;
     color: #0065FC;
+    height: 75px;
 }
 .activityNav {
     border-bottom: 2px solid #F2F2F2; 
@@ -347,13 +350,14 @@ header {
 .navLinks {
     margin-top: 20px;
     text-align: center;
+    width: 100%;
 }
 .navLinks > a {
-    width: 50%;
+    width: 50% !important;
     float: left;
 }
 .hostingSpan {
-    margin-bottom: 10px;
+    
 }
 .hosting {
     display: flex;
