--- a/style.css
+++ b/style.css
@@ -97,7 +97,6 @@ header {
 }
 .inputResearch {
     background-color: #0065FC;
-    border: #0065FC;
     color: white;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -190,7 +189,7 @@ header {
 .hostingPlace{
     background-color: white;
     width: 30%;
-    border: solid white;
+    padding: 8px;
     border-radius: 15px;
     border-width: 8px;
     box-shadow: 0px 0px 10px rgb(110, 110, 110);
@@ -228,7 +227,7 @@ h2 > i{
 .hostingPlacePopular {
     background-color: white;
     box-sizing: border-box;
-    border: solid white;
+    padding: 8px;
     border-width: 8px;
     border-radius: 15px;
     box-shadow: 0px 0px 10px rgb(110, 110, 110);
